feat: update GKE cluster

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 src/terraform/envs/*/.terraform/*
+src/terraform/envs/*/.terraform.lock.hcl
+src/terraform/envs/*/*.tfvars
+src/terraform/envs/*/*.tfstate
+src/terraform/envs/*/*.tfstate.backup
