--- a/helm/open-webui/values.yaml
+++ b/helm/open-webui/values.yaml
@@ -10,7 +10,7 @@ fullnameOverride: ""
 # Frontend (nginx) configuration
 frontend:
   image:
-    repository: asia-southeast1-docker.pkg.dev/aerial-jigsaw-472804-r0/dev-artifact-repo/open-webui-fe
+    repository: us-central1-docker.pkg.dev/ai-infra-475703/dev-artifact-repo/open-webui-fe
     pullPolicy: IfNotPresent
     tag: "latest"
   resources:
@@ -24,7 +24,7 @@ frontend:
 # Backend (Python API) configuration
 backend:
   image:
-    repository: asia-southeast1-docker.pkg.dev/aerial-jigsaw-472804-r0/dev-artifact-repo/open-webui-be
+    repository: us-central1-docker.pkg.dev/ai-infra-475703/dev-artifact-repo/open-webui-be
     pullPolicy: IfNotPresent
     tag: "latest"
   resources:
