fix: something fucked up

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,11 +2,11 @@
 # Ansible Configuration for AI Infrastructure Deployment
 
 # Inventory
-inventory = inventory/hosts.yml
+inventory = inventory/prod
 host_key_checking = False
 
 # Output
-stdout_callback = yaml
+stdout_callback = default
 bin_ansible_callbacks = True
 display_skipped_hosts = False
 display_ok_hosts = True
@@ -55,3 +55,6 @@ changed = yellow
 [diff]
 always = False
 context = 3
+
+[callback_default]
+result_format = yaml
