--- a/ansible/roles/tinyllama_deploy/tasks/deploy.yml
+++ b/ansible/roles/tinyllama_deploy/tasks/deploy.yml
@@ -1,16 +1,6 @@
 ---
 # Deployment tasks for TinyLlama model
 
-- name: Check if vllm_app.py exists
-  ansible.builtin.stat:
-    path: "{{ deployment_dir }}/vllm_app.py"
-  register: vllm_app_file
-
-- name: Fail if vllm_app.py not found
-  ansible.builtin.fail:
-    msg: "vllm_app.py not found at {{ deployment_dir }}/vllm_app.py"
-  when: not vllm_app_file.stat.exists
-
 - name: Check if ConfigMap already exists
   ansible.builtin.command: kubectl get configmap -n {{ kubernetes.namespace }} {{ kubernetes.config_map_name }}
   register: configmap_check
@@ -22,11 +12,23 @@
   when: configmap_check.rc == 0
   register: configmap_deleted
 
+- name: Generate vllm_app.py from template
+  ansible.builtin.template:
+    src: vllm_app.py.j2
+    dest: "{{ deployment_dir }}/vllm_app_rendered.py"
+    mode: "0644"
+
 - name: Create ConfigMap from vllm_app.py
-  ansible.builtin.command:
-    cmd: >
-      kubectl create configmap -n {{ kubernetes.namespace }} {{ kubernetes.config_map_name }}
-      --from-file=vllm_app.py={{ deployment_dir }}/vllm_app.py
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: ConfigMap
+      metadata:
+        name: vllm-app-code
+        namespace: "{{ kubernetes.namespace }}"
+      data:
+        vllm_app.py: "{{ lookup('file', deployment_dir + '/vllm_app_rendered.py') }}"
   register: configmap_created
   notify: configmap_created
 
@@ -55,6 +57,12 @@
   delay: 10
   failed_when: false
   when: rayservice_deleted.changed
+
+- name: Generate RayService manifest
+  ansible.builtin.template:
+    src: tinyllama-rayservice.yaml.j2
+    dest: "{{ deployment_dir }}/tinyllama-rayservice.yaml"
+    mode: "0644"
 
 - name: Apply RayService manifest
   ansible.builtin.command:
@@ -95,6 +103,16 @@
   ansible.builtin.debug:
     msg: "Ray Cluster: {{ ray_cluster_name }}"
 
+- name: Wait for head pod to be created
+  ansible.builtin.shell: |
+    kubectl get pod -n {{ kubernetes.namespace }} \
+    -l ray.io/cluster={{ ray_cluster_name }},ray.io/node-type=head
+  register: head_pod_created
+  until: head_pod_created.rc == 0
+  retries: 30
+  delay: 10
+  changed_when: false
+
 - name: Wait for head pod to be ready
   ansible.builtin.shell: |
     kubectl wait --for=condition=Ready \
@@ -102,6 +120,16 @@
     -l ray.io/cluster={{ ray_cluster_name }},ray.io/node-type=head \
     --timeout={{ timeouts.pod_ready }}s
   register: head_pod_ready
+  changed_when: false
+
+- name: Wait for worker pods to be created
+  ansible.builtin.shell: |
+    kubectl get pod -n {{ kubernetes.namespace }} \
+    -l ray.io/cluster={{ ray_cluster_name }},ray.io/node-type=worker
+  register: worker_pod_created
+  until: worker_pod_created.rc == 0
+  retries: 30
+  delay: 10
   changed_when: false
 
 - name: Wait for worker pods to be ready
