--- a/helm/open-webui/values.yaml
+++ b/helm/open-webui/values.yaml
@@ -10,7 +10,7 @@ fullnameOverride: ""
 # Frontend (nginx) configuration
 frontend:
   image:
-    repository: us-central1-docker.pkg.dev/ai-infra-475703/dev-artifact-repo/open-webui-fe
+    repository: asia-southeast1-docker.pkg.dev/tutorial-475402/dev-artifact-repo/open-webui-fe
     pullPolicy: IfNotPresent
     tag: "latest"
   resources:
@@ -24,7 +24,7 @@ frontend:
 # Backend (Python API) configuration
 backend:
   image:
-    repository: us-central1-docker.pkg.dev/ai-infra-475703/dev-artifact-repo/open-webui-be
+    repository: asia-southeast1-docker.pkg.dev/tutorial-475402/dev-artifact-repo/open-webui-be
     pullPolicy: IfNotPresent
     tag: "latest"
   resources:
@@ -43,12 +43,12 @@ service:
 # Secret configuration
 secret:
   create: true
-  webuiSecretKey: ""  # Leave empty to auto-generate, or set your own
+  webuiSecretKey: "" # Leave empty to auto-generate, or set your own
 
 persistence:
   enabled: true
   size: 5Gi
-  storageClass: "standard-rwo"  # GKE default storage class
+  storageClass: "standard-rwo" # GKE default storage class
 
 # Environment variables for backend
 env:
