--- a/ansible/roles/tinyllama_deploy/tasks/configure_cluster.yml
+++ b/ansible/roles/tinyllama_deploy/tasks/configure_cluster.yml
@@ -4,16 +4,16 @@
 - name: Get GKE cluster credentials
   ansible.builtin.command:
     cmd: >
-      gcloud container clusters get-credentials {{ gke_cluster_name }}
-      --region {{ gke_cluster_region }}
-      --project {{ gcp_project_id }}
+      gcloud container clusters get-credentials {{ tinyllama_deploy_gke_cluster_name }}
+      --region {{ tinyllama_deploy_gke_cluster_region }}
+      --project {{ tinyllama_deploy_gcp_project_id }}
   changed_when: true
 
 - name: Verify cluster connectivity
   ansible.builtin.command: kubectl cluster-info
-  register: cluster_info
+  register: tinyllama_deploy_cluster_info
   changed_when: false
 
 - name: Display cluster info
   ansible.builtin.debug:
-    var: cluster_info.stdout_lines
+    var: tinyllama_deploy_cluster_info.stdout_lines
