--- a/ansible/roles/tinyllama_deploy/tasks/summary.yml
+++ b/ansible/roles/tinyllama_deploy/tasks/summary.yml
@@ -7,23 +7,23 @@
       - "=========================================="
       - "TinyLlama Deployment Summary"
       - "=========================================="
-      - "Environment: {{ deploy_environment }}"
-      - "Namespace: {{ kubernetes.namespace }}"
-      - "RayService: {{ kubernetes.deployment_name }}"
-      - "Ray Cluster: {{ ray_cluster_name | default('N/A') }}"
-      - "Head Pod: {{ head_pod_name | default('N/A') }}"
-      - "Service: {{ service_name | default('N/A') }}"
+      - "Environment: {{ tinyllama_deploy_environment }}"
+      - "Namespace: {{ tinyllama_deploy_kubernetes.namespace }}"
+      - "RayService: {{ tinyllama_deploy_kubernetes.deployment_name }}"
+      - "Ray Cluster: {{ tinyllama_deploy_ray_cluster_name | default('N/A') }}"
+      - "Head Pod: {{ tinyllama_deploy_head_pod_name | default('N/A') }}"
+      - "Service: {{ tinyllama_deploy_service_name | default('N/A') }}"
       - "=========================================="
       - ""
       - "Next steps:"
       - "1. Port forward to access the service:"
-      - "   kubectl port-forward -n {{ kubernetes.namespace }} svc/{{ service_name | default('tinyllama-service-serve-svc') }} 8000:8000"
+      - "   kubectl port-forward -n {{ tinyllama_deploy_kubernetes.namespace }} svc/{{ tinyllama_deploy_service_name | default('tinyllama-service-serve-svc') }} 8000:8000"
       - ""
       - "2. Test the model:"
       - "   curl -X POST http://localhost:8000/ \\"
       - "     -H 'Content-Type: application/json' \\"
-      - "     -d '{\"messages\": [{\"role\": \"user\", \"content\": \"Hello!\"}], \"max_tokens\": 100}'"
+      - '     -d ''{"messages": [{"role": "user", "content": "Hello!"}], "max_tokens": 100}'''
       - ""
       - "3. View logs:"
-      - "   kubectl logs -n {{ kubernetes.namespace }} -l ray.io/node-type=head -f"
+      - "   kubectl logs -n {{ tinyllama_deploy_kubernetes.namespace }} -l ray.io/node-type=head -f"
       - "=========================================="
