--- a/ansible/roles/tinyllama_deploy/tasks/deploy.yml
+++ b/ansible/roles/tinyllama_deploy/tasks/deploy.yml
@@ -2,20 +2,20 @@
 # Deployment tasks for TinyLlama model
 
 - name: Check if ConfigMap already exists
-  ansible.builtin.command: kubectl get configmap -n {{ kubernetes.namespace }} {{ kubernetes.config_map_name }}
-  register: configmap_check
+  ansible.builtin.command: kubectl get configmap -n {{ tinyllama_deploy_kubernetes.namespace }} {{ tinyllama_deploy_kubernetes.config_map_name }}
+  register: tinyllama_deploy_configmap_check
   changed_when: false
   failed_when: false
 
 - name: Delete existing ConfigMap if exists
-  ansible.builtin.command: kubectl delete configmap -n {{ kubernetes.namespace }} {{ kubernetes.config_map_name }}
-  when: configmap_check.rc == 0
-  register: configmap_deleted
+  ansible.builtin.command: kubectl delete configmap -n {{ tinyllama_deploy_kubernetes.namespace }} {{ tinyllama_deploy_kubernetes.config_map_name }}
+  when: tinyllama_deploy_configmap_check.rc == 0
+  register: tinyllama_deploy_configmap_deleted
 
 - name: Generate vllm_app.py from template
   ansible.builtin.template:
     src: vllm_app.py.j2
-    dest: "{{ deployment_dir }}/vllm_app_rendered.py"
+    dest: "{{ tinyllama_deploy_deployment_dir }}/vllm_app_rendered.py"
     mode: "0644"
 
 - name: Create ConfigMap from vllm_app.py
@@ -26,89 +26,89 @@
       kind: ConfigMap
       metadata:
         name: vllm-app-code
-        namespace: "{{ kubernetes.namespace }}"
+        namespace: "{{ tinyllama_deploy_kubernetes.namespace }}"
       data:
-        vllm_app.py: "{{ lookup('file', deployment_dir + '/vllm_app_rendered.py') }}"
-  register: configmap_created
+        vllm_app.py: "{{ lookup('file', tinyllama_deploy_deployment_dir + '/vllm_app_rendered.py') }}"
+  register: tinyllama_deploy_configmap_created
   notify: configmap_created
 
 - name: ConfigMap creation status
   ansible.builtin.debug:
     msg: "ConfigMap created successfully"
-  when: configmap_created.changed
+  when: tinyllama_deploy_configmap_created.changed
 
 - name: Check if RayService already exists
-  ansible.builtin.command: kubectl get rayservice -n {{ kubernetes.namespace }} {{ kubernetes.deployment_name }}
-  register: rayservice_check
+  ansible.builtin.command: kubectl get rayservice -n {{ tinyllama_deploy_kubernetes.namespace }} {{ tinyllama_deploy_kubernetes.deployment_name }}
+  register: tinyllama_deploy_rayservice_check
   changed_when: false
   failed_when: false
 
 - name: Delete existing RayService if exists
-  ansible.builtin.command: kubectl delete rayservice -n {{ kubernetes.namespace }} {{ kubernetes.deployment_name }}
-  when: rayservice_check.rc == 0
-  register: rayservice_deleted
+  ansible.builtin.command: kubectl delete rayservice -n {{ tinyllama_deploy_kubernetes.namespace }} {{ tinyllama_deploy_kubernetes.deployment_name }}
+  when: tinyllama_deploy_rayservice_check.rc == 0
+  register: tinyllama_deploy_rayservice_deleted
   notify: rayservice_deleted
 
 - name: Wait for old RayService to be deleted
-  ansible.builtin.command: kubectl get rayservice -n {{ kubernetes.namespace }} {{ kubernetes.deployment_name }}
-  register: deletion_check
-  until: deletion_check.rc != 0
+  ansible.builtin.command: kubectl get rayservice -n {{ tinyllama_deploy_kubernetes.namespace }} {{ tinyllama_deploy_kubernetes.deployment_name }}
+  register: tinyllama_deploy_deletion_check
+  until: tinyllama_deploy_deletion_check.rc != 0
   retries: 30
   delay: 10
   failed_when: false
-  when: rayservice_deleted.changed
+  when: tinyllama_deploy_rayservice_deleted.changed
 
 - name: Generate RayService manifest
   ansible.builtin.template:
     src: tinyllama-rayservice.yaml.j2
-    dest: "{{ deployment_dir }}/tinyllama-rayservice.yaml"
+    dest: "{{ tinyllama_deploy_deployment_dir }}/tinyllama-rayservice.yaml"
     mode: "0644"
 
 - name: Apply RayService manifest
   ansible.builtin.command:
-    cmd: kubectl apply -f {{ deployment_dir }}/tinyllama-rayservice.yaml
-  register: rayservice_applied
+    cmd: kubectl apply -f {{ tinyllama_deploy_deployment_dir }}/tinyllama-rayservice.yaml
+  register: tinyllama_deploy_rayservice_applied
   notify: rayservice_deployed
 
 - name: Wait for RayService to be created
-  ansible.builtin.command: kubectl get rayservice -n {{ kubernetes.namespace }} {{ kubernetes.deployment_name }}
-  register: rayservice_exists
-  until: rayservice_exists.rc == 0
+  ansible.builtin.command: kubectl get rayservice -n {{ tinyllama_deploy_kubernetes.namespace }} {{ tinyllama_deploy_kubernetes.deployment_name }}
+  register: tinyllama_deploy_rayservice_exists
+  until: tinyllama_deploy_rayservice_exists.rc == 0
   retries: 30
   delay: 10
   changed_when: false
 
 - name: Get Ray cluster name
   ansible.builtin.shell: |
-    ACTIVE=$(kubectl get rayservice -n {{ kubernetes.namespace }} {{ kubernetes.deployment_name }} \
+    ACTIVE=$(kubectl get rayservice -n {{ tinyllama_deploy_kubernetes.namespace }} {{ tinyllama_deploy_kubernetes.deployment_name }} \
       -o jsonpath='{.status.activeServiceStatus.rayClusterName}' 2>/dev/null || echo "")
-    PENDING=$(kubectl get rayservice -n {{ kubernetes.namespace }} {{ kubernetes.deployment_name }} \
+    PENDING=$(kubectl get rayservice -n {{ tinyllama_deploy_kubernetes.namespace }} {{ tinyllama_deploy_kubernetes.deployment_name }} \
       -o jsonpath='{.status.pendingServiceStatus.rayClusterName}' 2>/dev/null || echo "")
     if [ -n "$ACTIVE" ]; then
       echo "$ACTIVE"
     elif [ -n "$PENDING" ]; then
       echo "$PENDING"
     fi
-  register: ray_cluster_name_output
+  register: tinyllama_deploy_ray_cluster_name_output
   changed_when: false
   retries: 10
   delay: 10
-  until: ray_cluster_name_output.stdout != ""
+  until: tinyllama_deploy_ray_cluster_name_output.stdout != ""
 
 - name: Set Ray cluster name fact
   ansible.builtin.set_fact:
-    ray_cluster_name: "{{ ray_cluster_name_output.stdout }}"
+    tinyllama_deploy_ray_cluster_name: "{{ tinyllama_deploy_ray_cluster_name_output.stdout }}"
 
 - name: Display Ray cluster name
   ansible.builtin.debug:
-    msg: "Ray Cluster: {{ ray_cluster_name }}"
+    msg: "Ray Cluster: {{ tinyllama_deploy_ray_cluster_name }}"
 
 - name: Wait for head pod to be created
   ansible.builtin.shell: |
-    kubectl get pod -n {{ kubernetes.namespace }} \
-    -l ray.io/cluster={{ ray_cluster_name }},ray.io/node-type=head
-  register: head_pod_created
-  until: head_pod_created.rc == 0
+    kubectl get pod -n {{ tinyllama_deploy_kubernetes.namespace }} \
+    -l ray.io/cluster={{ tinyllama_deploy_ray_cluster_name }},ray.io/node-type=head
+  register: tinyllama_deploy_head_pod_created
+  until: tinyllama_deploy_head_pod_created.rc == 0
   retries: 30
   delay: 10
   changed_when: false
@@ -116,18 +116,18 @@
 - name: Wait for head pod to be ready
   ansible.builtin.shell: |
     kubectl wait --for=condition=Ready \
-    pod -n {{ kubernetes.namespace }} \
-    -l ray.io/cluster={{ ray_cluster_name }},ray.io/node-type=head \
-    --timeout={{ timeouts.pod_ready }}s
-  register: head_pod_ready
+    pod -n {{ tinyllama_deploy_kubernetes.namespace }} \
+    -l ray.io/cluster={{ tinyllama_deploy_ray_cluster_name }},ray.io/node-type=head \
+    --timeout={{ tinyllama_deploy_timeouts.pod_ready }}s
+  register: tinyllama_deploy_head_pod_ready
   changed_when: false
 
 - name: Wait for worker pods to be created
   ansible.builtin.shell: |
-    kubectl get pod -n {{ kubernetes.namespace }} \
-    -l ray.io/cluster={{ ray_cluster_name }},ray.io/node-type=worker
-  register: worker_pod_created
-  until: worker_pod_created.rc == 0
+    kubectl get pod -n {{ tinyllama_deploy_kubernetes.namespace }} \
+    -l ray.io/cluster={{ tinyllama_deploy_ray_cluster_name }},ray.io/node-type=worker
+  register: tinyllama_deploy_worker_pod_created
+  until: tinyllama_deploy_worker_pod_created.rc == 0
   retries: 30
   delay: 10
   changed_when: false
@@ -135,17 +135,17 @@
 - name: Wait for worker pods to be ready
   ansible.builtin.shell: |
     kubectl wait --for=condition=Ready \
-    pod -n {{ kubernetes.namespace }} \
-    -l ray.io/cluster={{ ray_cluster_name }},ray.io/node-type=worker \
-    --timeout={{ timeouts.pod_ready }}s
-  register: worker_pod_ready
+    pod -n {{ tinyllama_deploy_kubernetes.namespace }} \
+    -l ray.io/cluster={{ tinyllama_deploy_ray_cluster_name }},ray.io/node-type=worker \
+    --timeout={{ tinyllama_deploy_timeouts.pod_ready }}s
+  register: tinyllama_deploy_worker_pod_ready
   changed_when: false
 
 - name: Get pod status
-  ansible.builtin.command: kubectl get pods -n {{ kubernetes.namespace }} -l ray.io/cluster={{ ray_cluster_name }}
-  register: pod_status
+  ansible.builtin.command: kubectl get pods -n {{ tinyllama_deploy_kubernetes.namespace }} -l ray.io/cluster={{ tinyllama_deploy_ray_cluster_name }}
+  register: tinyllama_deploy_pod_status
   changed_when: false
 
 - name: Display pod status
   ansible.builtin.debug:
-    var: pod_status.stdout_lines
+    var: tinyllama_deploy_pod_status.stdout_lines
