--- a/ansible/roles/tinyllama_deploy/tasks/namespace.yml
+++ b/ansible/roles/tinyllama_deploy/tasks/namespace.yml
@@ -2,17 +2,17 @@
 # Namespace management tasks
 
 - name: Check if namespace exists
-  ansible.builtin.command: kubectl get namespace {{ kubernetes.namespace }}
-  register: namespace_check
+  ansible.builtin.command: kubectl get namespace {{ tinyllama_deploy_kubernetes.namespace }}
+  register: tinyllama_deploy_namespace_check
   changed_when: false
   failed_when: false
 
 - name: Create namespace if not exists
-  ansible.builtin.command: kubectl create namespace {{ kubernetes.namespace }}
-  when: namespace_check.rc != 0
-  register: namespace_created
+  ansible.builtin.command: kubectl create namespace {{ tinyllama_deploy_kubernetes.namespace }}
+  when: tinyllama_deploy_namespace_check.rc != 0
+  register: tinyllama_deploy_namespace_created
   notify: namespace_created
 
 - name: Namespace status
   ansible.builtin.debug:
-    msg: "{{ 'Namespace created' if namespace_created.changed else 'Namespace already exists' }}"
+    msg: "{{ 'Namespace created' if tinyllama_deploy_namespace_created.changed else 'Namespace already exists' }}"
