--- a/ansible/roles/tinyllama_deploy/tasks/preflight.yml
+++ b/ansible/roles/tinyllama_deploy/tasks/preflight.yml
@@ -4,25 +4,25 @@
 - name: Verify required variables are set
   ansible.builtin.assert:
     that:
-      - deploy_environment is defined
-      - deploy_environment in ['dev', 'prod']
-    fail_msg: "Environment variable 'deploy_environment' must be set to 'dev' or 'prod'"
-    success_msg: "Environment is set to: {{ deploy_environment }}"
+      - tinyllama_deploy_environment is defined
+      - tinyllama_deploy_environment in ['dev', 'prod']
+    fail_msg: "Environment variable 'tinyllama_deploy_environment' must be set to 'dev' or 'prod'"
+    success_msg: "Environment is set to: {{ tinyllama_deploy_environment }}"
 
 - name: Check if kubectl is installed
   ansible.builtin.command: kubectl version --client
-  register: kubectl_version
+  register: tinyllama_deploy_kubectl_version
   changed_when: false
-  failed_when: kubectl_version.rc != 0
+  failed_when: tinyllama_deploy_kubectl_version.rc != 0
 
 - name: Check if gcloud is installed
   ansible.builtin.command: gcloud version
-  register: gcloud_version
+  register: tinyllama_deploy_gcloud_version
   changed_when: false
-  failed_when: gcloud_version.rc != 0
+  failed_when: tinyllama_deploy_gcloud_version.rc != 0
 
 - name: Display tool versions
   ansible.builtin.debug:
     msg:
-      - "Kubectl version: {{ kubectl_version.stdout_lines[0] }}"
-      - "Gcloud version: {{ gcloud_version.stdout_lines[0] }}"
+      - "Kubectl version: {{ tinyllama_deploy_kubectl_version.stdout_lines[0] }}"
+      - "Gcloud version: {{ tinyllama_deploy_gcloud_version.stdout_lines[0] }}"
