--- a/ansible/roles/tinyllama_deploy/tasks/summary.yml
+++ b/ansible/roles/tinyllama_deploy/tasks/summary.yml
@@ -17,7 +17,8 @@
       - ""
       - "Next steps:"
       - "1. Port forward to access the service:"
-      - "   kubectl port-forward -n {{ tinyllama_deploy_kubernetes.namespace }} svc/{{ tinyllama_deploy_service_name | default('tinyllama-service-serve-svc') }} 8000:8000"
+      - "   kubectl port-forward -n {{ tinyllama_deploy_kubernetes.namespace }} \\"
+      - "     svc/{{ tinyllama_deploy_service_name | default('tinyllama-service-serve-svc') }} 8000:8000"
       - ""
       - "2. Test the model:"
       - "   curl -X POST http://localhost:8000/ \\"
