--- a/ansible/roles/tinyllama_deploy/tasks/verify.yml
+++ b/ansible/roles/tinyllama_deploy/tasks/verify.yml
@@ -2,9 +2,9 @@
 # Verification tasks
 
 - name: Get head pod name
-  ansible.builtin.shell: |
-    kubectl get pods -n {{ tinyllama_deploy_kubernetes.namespace }} \
-    -l ray.io/cluster={{ tinyllama_deploy_ray_cluster_name }},ray.io/node-type=head \
+  ansible.builtin.command: >
+    kubectl get pods -n {{ tinyllama_deploy_kubernetes.namespace }}
+    -l ray.io/cluster={{ tinyllama_deploy_ray_cluster_name }},ray.io/node-type=head
     -o jsonpath='{.items[0].metadata.name}'
   register: tinyllama_deploy_head_pod_name_output
   changed_when: false
@@ -24,6 +24,7 @@
 
 - name: Wait for Serve application to be ready
   ansible.builtin.shell: |
+    set -o pipefail
     kubectl exec -n {{ tinyllama_deploy_kubernetes.namespace }} {{ tinyllama_deploy_head_pod_name }} -c ray-head -- serve status | grep -q "RUNNING"
   register: tinyllama_deploy_serve_ready
   until: tinyllama_deploy_serve_ready.rc == 0
@@ -47,8 +48,8 @@
   changed_when: false
 
 - name: Check if deployment is healthy
-  ansible.builtin.shell: |
-    kubectl get rayservice -n {{ tinyllama_deploy_kubernetes.namespace }} {{ tinyllama_deploy_kubernetes.deployment_name }} \
+  ansible.builtin.command: >
+    kubectl get rayservice -n {{ tinyllama_deploy_kubernetes.namespace }} {{ tinyllama_deploy_kubernetes.deployment_name }}
     -o jsonpath='{.status.activeServiceStatus.applicationStatus.status}'
   register: tinyllama_deploy_app_status
   changed_when: false
