--- a/helm/open-webui/templates/service.yaml
+++ b/helm/open-webui/templates/service.yaml
@@ -1,34 +1,36 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "open-webui.fullname" . }}
+  name: {{ include "open-webui.name" . }}
+  namespace: {{ include "open-webui.namespace" . }}
   labels:
     {{- include "open-webui.labels" . | nindent 4 }}
+    {{- with .Values.service.labels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+  {{- with .Values.service.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
-  type: {{ .Values.service.type }}
+  selector:
+    {{- include "open-webui.selectorLabels" . | nindent 4 }}
+  type: {{ .Values.service.type | default "ClusterIP" }}
   ports:
-  - port: {{ .Values.service.port }}
-    targetPort: http
-    protocol: TCP
+  - protocol: TCP
     name: http
-  selector:
-    {{- include "open-webui.selectorLabels" . | nindent 4 }}
-    app.kubernetes.io/component: frontend
----
-# Internal service for backend API
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ include "open-webui.fullname" . }}-backend
-  labels:
-    {{- include "open-webui.labels" . | nindent 4 }}
-spec:
-  type: ClusterIP
-  ports:
-  - port: {{ .Values.service.backendPort }}
-    targetPort: api
-    protocol: TCP
-    name: api
-  selector:
-    {{- include "open-webui.selectorLabels" . | nindent 4 }}
-    app.kubernetes.io/component: backend
+    port: {{ .Values.service.port }}
+    targetPort: http
+    {{- if .Values.service.nodePort }}
+    nodePort: {{ .Values.service.nodePort | int }}
+    {{- end }}
+  {{- if .Values.service.loadBalancerClass }}
+  loadBalancerClass: {{ .Values.service.loadBalancerClass | quote }}
+  {{- end }}
+  {{- if and (eq .Values.service.type "ClusterIP") (.Values.service.clusterIP) }}
+  clusterIP: {{ .Values.service.clusterIP }}
+  {{- end }}
+  {{- if and (eq .Values.service.type "LoadBalancer") (.Values.service.loadBalancerIP) }}
+  loadBalancerIP: {{ .Values.service.loadBalancerIP }}
+  {{- end }}
+  
